--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3,6 +3,18 @@
 @import "owl";
 @import "fontawesome";
 
+body {
+  &.blured {
+    overflow: hidden;
+
+    main,
+    footer,
+    #backToTop {
+      filter: blur(4px);
+    }
+  }
+}
+
 .header {
   &__main {
     max-width: 100vw;
@@ -107,8 +119,9 @@
             }
 
             &::after {
-              content: "\f107";
+              content: "\f0d7";
               font-family: "Font Awesome 5 Pro";
+              font-weight: 900;
               color: $text_color;
               font-size: 1.2rem;
               margin-right: 0.5rem;
@@ -143,6 +156,7 @@
         height: 100%;
 
         img {
+          display: block;
           width: 49px;
           height: 49px;
         }
@@ -171,9 +185,11 @@
     }
   }
 
-  @media only screen and (max-width: 992px) {
+  @media only screen and (max-width: 768px) {
     &__main {
       overflow-x: hidden;
+      height: 100%;
+      max-height: 57px;
 
       nav {
         & > ul {
@@ -182,23 +198,74 @@
       }
 
       &__left {
+        .logo {
+          padding: 0.25rem 0;
+
+          img {
+            display: block;
+            width: 60px;
+          }
+        }
       }
 
       &__menu {
         display: block;
-        padding: 1rem;
-        margin-left: 1rem;
-        font-size: 1.5rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+
+        .toggle {
+          position: relative;
+          width: 49px;
+          height: 49px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          overflow: hidden;
+
+          span {
+            position: absolute;
+            width: 40px;
+            height: 4px;
+            border-radius: 4px;
+            background: $primary_color;
+            @include transition($duration: 0.5s);
+
+            &:nth-child(2) {
+              transform: translateY(-15px);
+              width: 25px;
+              right: 6px;
+            }
+
+            &:nth-child(3) {
+              transform: translateY(15px);
+              width: 15px;
+              right: 6px;
+            }
+          }
+
+          &.active span {
+            &:nth-child(1) {
+              transform: translateX(60px);
+            }
+
+            &:nth-child(2) {
+              width: 40px;
+              transform: translateX(0) rotate(45deg);
+              @include transition($duration: 0.2s);
+            }
+
+            &:nth-child(3) {
+              width: 40px;
+              transform: translateX(0) rotate(-45deg);
+              @include transition($duration: 0.3s);
+            }
+          }
+        }
       }
 
       &__sm {
         position: fixed;
-        top: 0;
+        top: 57px;
         background-color: $white_color;
-        height: 100vh;
+        height: calc(100vh - 57px);
         width: 300px;
         overflow-y: scroll;
         max-width: 70vw;
@@ -214,82 +281,25 @@
           right: 0;
         }
 
-        .close-aside {
-          position: absolute;
-          top: 1rem;
-          left: 1rem;
-          background-color: $red_color;
-          border-radius: 100%;
-          width: 40px;
-          height: 40px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-
-          i {
-            color: $white_color;
-            font-size: 2rem;
-          }
-        }
-
-        &__head {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-          padding: 2rem 0;
-          border-bottom: 1px solid #ddd;
-
-          .user {
-            width: 120px;
-            height: 120px;
-            border-radius: 100%;
-            object-fit: cover;
-          }
-
-          .icon-box {
-            margin-top: 2rem;
-            display: flex;
-            flex-direction: column;
-
-            a {
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              color: $text_color;
-              @include transition;
-
-              i {
-                font-size: 1.5rem;
-                margin: 0 0.5rem;
-                padding: 0.5rem;
-              }
-
-              &:hover {
-                color: $primary_color;
-              }
-            }
-          }
-        }
-
         &__body {
           padding: 1rem;
+          padding-top: 0.5rem;
 
           & > ul {
             padding: 0;
-            margin-top: 1rem;
+            margin-top: 0;
             list-style: none;
 
             li {
-              margin-bottom: 0.5rem;
+              padding: 0.5rem 0.25rem;
 
               a {
                 color: $text_color;
                 list-style: none;
+              }
 
-                &:hover {
-                  color: $primary_color;
-                }
+              &:not(:last-child) {
+                border-bottom: 1px solid $border_color;
               }
 
               &.has-children-sm {
@@ -304,8 +314,9 @@
                 }
 
                 &::after {
-                  content: "\f107";
+                  content: "\f0d7";
                   font-family: "Font Awesome 5 Pro";
+                  font-weight: 900;
                   color: $text_color;
                   font-size: 1.5rem;
                   margin-right: 0.5rem;
@@ -340,6 +351,10 @@
             flex-direction: column;
             align-items: center;
             margin-bottom: 1rem;
+
+            span {
+              margin-bottom: 0.5rem;
+            }
           }
 
           .icons {
