product list screen

--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -1,8 +1,7 @@
-// https://coolors.co/palette/e63946-f1faee-a8dadc-457b9d-1d3557
-$primary_color: #1d3557;
-$secondary_color: #457b9d;
-$third_color: #a8dadc;
-$forth_color: #e63946;
+// https://coolors.co/palette/ff9f1c-ffbf69-ffffff-cbf3f0-2ec4b6
+$primary_color: #2ec4b6;
+$secondary_color: #2ec4b6;
+$third_color: #ff9f1c;
 $bg_color: #f1faee;
 $black_color: #111;
 $white_color: #fff;
