added gallery list

--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -253,6 +253,7 @@ section {
 ::-webkit-selection {
   background-color: #c3d9ff;
 }
+// here
 
 html,
 body {
@@ -292,6 +293,9 @@ html {
   max-width: 100vw;
   overflow-x: hidden;
 }
+
+// here
+
 
 .fw-900 {
   font-weight: 900 !important;
