--- a/css/styles.scss
+++ b/css/styles.scss
@@ -2,6 +2,7 @@
 @import "reset";
 @import "owl";
 @import "fontawesome";
+@import "lightgallery";
 
 body {
   &.blured {
@@ -21,7 +22,7 @@ body {
     overflow-y: visible;
     box-shadow: 0 10px 32px rgba(0, 0, 0, 0.02);
     position: relative;
-    z-index: 9999;
+    z-index: 999;
     @include transition;
 
     & > .container {
@@ -809,6 +810,60 @@ footer {
           border-top: 1px solid darken($color: $border_color, $amount: 25%);
           margin-top: 0.5rem;
           padding-top: 0.5rem;
+        }
+      }
+    }
+  }
+}
+
+.gallery {
+  &__list {
+    .gallery-item {
+      display: block;
+      width: 100%;
+      aspect-ratio: 1;
+      height: 260px;
+      overflow: hidden;
+      position: relative;
+      margin-bottom: 2rem;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        @include transition;
+      }
+
+      &::before {
+        position: absolute;
+        top: 0;
+        right: -75%;
+        z-index: 2;
+        display: block;
+        content: "";
+        width: 50%;
+        height: 100%;
+        background: -webkit-linear-gradient(
+          right,
+          rgba($color: $white_color, $alpha: 0) 0%,
+          rgba($color: $white_color, $alpha: 0.3) 100%
+        );
+        background: linear-gradient(
+          to left,
+          rgba($color: $white_color, $alpha: 0) 0%,
+          rgba($color: $white_color, $alpha: 0.3) 100%
+        );
+        transform: skewX(25deg);
+        @include transition;
+      }
+
+      &:hover {
+        img {
+          transform: scale(1.2);
+        }
+
+        &::before {
+          right: 125%;
         }
       }
     }
