--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -204,7 +204,7 @@ input,
 select,
 textarea,
 button {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "sans", Arial, Helvetica, sans-serif;
   outline: 0;
   resize: none;
 }
