blog single complete

--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -1,6 +1,6 @@
 // https://coolors.co/palette/ff9f1c-ffbf69-ffffff-cbf3f0-2ec4b6
 $primary_color: #2ec4b6;
-$secondary_color: #2ec4b6;
+$secondary_color: #63dad2;
 $third_color: #ff9f1c;
 $bg_color: #f1faee;
 $black_color: #111;
@@ -295,7 +295,6 @@ html {
 }
 
 // here
-
 
 .fw-900 {
   font-weight: 900 !important;
